tests/NormalTests/paczka1/fuzzy1/97214225.err
Error in line 16: llKSmEU A131 32,6
Error in line 19: S520 A131 19,8
Error in line 29: 4bA5 S395 61,58
Error in line 30: 4bA5 S395 127,3
Error in line 36: fVgh S520 1,4
